--- a/views/ai-video-generation/video-calendar.hbs
+++ b/views/ai-video-generation/video-calendar.hbs
@@ -326,6 +326,7 @@
 
 <body>
     <div class='container'>
+        {{> languageselector}}
         {{> navmenu}}
 
         <div class="header-container">
