--- a/views/ai-video-generation/audio-list.hbs
+++ b/views/ai-video-generation/audio-list.hbs
@@ -142,6 +142,7 @@
 
 <body>
   <div class='container'>
+    {{> languageselector}}
     {{> navmenu}}
 
     <div class="header-container">
@@ -181,23 +182,23 @@
     <div class="pagination-container">
       <ul class="pagination">
         <li class="{{#unless pagination.hasPrev}}disabled{{/unless}}">
-          <a href="?page=1">First</a>
+          <a href="?page=1" class="pagination-link">First</a>
         </li>
         <li class="{{#unless pagination.hasPrev}}disabled{{/unless}}">
-          <a href="?page={{pagination.prevPage}}">Previous</a>
+          <a href="?page={{pagination.prevPage}}" class="pagination-link">Previous</a>
         </li>
 
         {{#each (generatePageNumbers pagination.currentPage pagination.totalPages)}}
         <li class="{{#if (eq this ../pagination.currentPage)}}active{{/if}}">
-          <a href="?page={{this}}">{{this}}</a>
+          <a href="?page={{this}}" class="pagination-link">{{this}}</a>
         </li>
         {{/each}}
 
         <li class="{{#unless pagination.hasNext}}disabled{{/unless}}">
-          <a href="?page={{pagination.nextPage}}">Next</a>
+          <a href="?page={{pagination.nextPage}}" class="pagination-link">Next</a>
         </li>
         <li class="{{#unless pagination.hasNext}}disabled{{/unless}}">
-          <a href="?page={{pagination.totalPages}}">Last</a>
+          <a href="?page={{pagination.totalPages}}" class="pagination-link">Last</a>
         </li>
       </ul>
     </div>
